--- a/.env.sample
+++ b/.env.sample
@@ -2,7 +2,7 @@ api_id=12345
 api_hash=83jfo2ndi
 session=pyrogram v2
 mongo_uri=mongodb+srv://
-db_name=mix-userbot
+db_name=argus-userbot
 scheme=
 hostname=
 port=
